admin API：admin_info, logout，change password
