# controller/admin_login.go
@@ -1,9 +1,15 @@
 package controller
 
 import (
+	"encoding/json"
+	"github.com/e421083458/golang_common/lib"
+	"github.com/gin-gonic/contrib/sessions"
 	"github.com/gin-gonic/gin"
+	"go_gateway_demo/dao"
 	"go_gateway_demo/dto"
 	"go_gateway_demo/middleware"
+	"go_gateway_demo/public"
+	"time"
 )
 
 type AdminLoginController struct {
@@ -13,9 +19,10 @@ func AdminLoginRegister(group *gin.RouterGroup) {
 	adminLogin := &AdminLoginController{}
 	// 请求前缀 + action方法
 	group.POST("/login", adminLogin.AdminLogin)
+	group.GET("/logout", adminLogin.AdminLogout)
 }
 
-// ListPage godoc
+// AdminLogin godoc
 // @Summary 管理员登陆
 // @Description 管理员登陆
 // @Tags 管理员接口
@@ -26,11 +33,66 @@ func AdminLoginRegister(group *gin.RouterGroup) {
 // @Success 200 {object} middleware.Response{data=dto.AdminLoginOutput} "success"
 // @Router /admin_login/login [post]
 func (adminlogin *AdminLoginController) AdminLogin(c *gin.Context) {
+	// 定义接收参数用到的结构体
 	params := &dto.AdminLoginInput{}
+	// 进行数据绑定，将接收的参数绑定到param中
 	if err := params.BindingValidParams(c); err != nil {
-		middleware.ResponseError(c, 1001, err)
+		middleware.ResponseError(c, 2000, err)
 		return
 	}
-	out := &dto.AdminLoginOutput{Token: params.UserName}
+	/**
+	1. params.UserName 获取管理员信息 admininfo
+	2. admininfo.salt + params.Password sha256 => saltPassword
+	3. saltPassword == admininfo.password
+	*/
+	// 获取名为default的连接池
+	tx, err := lib.GetGormPool("default")
+	if err != nil {
+		middleware.ResponseError(c, 2001, err)
+		return
+	}
+	admin := &dao.Admin{}
+	admin, err = admin.LoginCheck(c, tx, params)
+	if err != nil {
+		middleware.ResponseError(c, 2002, err)
+		return
+	}
+	// 设置session
+	sessionInfo := &dto.AdminSessionInfo{
+		ID:        admin.Id,
+		UserName:  admin.UserName,
+		LoginTime: time.Now(),
+	}
+	sessBts, err := json.Marshal(sessionInfo)
+	if err != nil {
+		middleware.ResponseError(c, 2003, err)
+		return
+	}
+	// shortcut to get session
+	sess := sessions.Default(c)
+	// sets the session value associated to the given key.
+	sess.Set(public.AdminSessionInfoKey, string(sessBts))
+	// Save saves all sessions used during the current request.
+	sess.Save()
+
+	out := &dto.AdminLoginOutput{Token: admin.UserName}
 	middleware.ResponseSuccess(c, out)
+}
+
+// AdminLogout godoc
+// @Summary 管理员退出
+// @Description 管理员退出
+// @Tags 管理员接口
+// @ID /admin_login/logout
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} middleware.Response{data=string} "success"
+// @Router /admin_login/logout [get]
+func (adminlogin *AdminLoginController) AdminLogout(c *gin.Context) {
+	// shortcut to get session
+	sess := sessions.Default(c)
+	sess.Delete(public.AdminSessionInfoKey)
+	sess.Save()
+
+	middleware.ResponseSuccess(c, "")
 }
